# pithekos

./: .gitignore  README.md  package-lock.json  package.json
setup/: app_setup.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  Rocket.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
templates/: i18n.json  user_settings.json
templates/content_templates/text_translation/: metadata.json
webfonts/: _webfonts.css  andika.css  awami.css  awamiextrabold.css  awamimedium.css  awamisemibold.css  cardo.css  charis.css  ezra.css  ezrasr.css  gentiumbookplus.css  gentiumplus.css  notonaskharabic.css  opensans.css  padauk.css  padaukbook.css  pankosmia-Andika.css  pankosmia-Awami_Nastaliq.css  pankosmia-Awami_Nastaliq_Extra_Bold.css  pankosmia-Awami_Nastaliq_Medium.css  pankosmia-Awami_Nastaliq_Semi_Bold.css  pankosmia-Cardo.css  pankosmia-Charis_SIL.css  pankosmia-Galatia_SIL.css  pankosmia-Gentium_Book_Plus.css  pankosmia-Gentium_Plus.css  pankosmia-Noto_Nastaliq_Urdu.css  pankosmia-Padauk.css  pankosmia-Padauk_Book.css  roboto.css  robotoblack.css  robotolight.css  robotomedium.css  robotothin.css  webfonts.json
